<resources>
    <string name="app_name">Vector Camera</string>
    <string name="noImagesFound">No pictures found.</string>

    <string name="autoConvertPicturesPrefsKey">autoConvertPictures</string>
    <string name="autoConvertPicturesPrefsTitle">Automatically convert camera pictures</string>

    <string name="liveGridPreviewPrefsKey">liveGridPreview</string>
    <string name="liveGridPreviewPrefsTitle">Live preview when choosing effect</string>

    <string name="numAsciiColumnsPrefId">numAsciiColumns</string>
    <string name="numAsciiColumnsPrefTitle">Number of text columns</string>
    <string name="numAsciiColumnsPrefMessage">Choose the number of columns of text to create when using text effects.</string>

    <string name="whiteOnBlackPixelCharsPrefId">pixelChars.WHITE_ON_BLACK</string>
    <string name="whiteOnBlackPixelCharsPrefTitle">White on black characters</string>
    <string name="whiteOnBlackPixelCharsPrefSummary">Characters for white on black mode.</string>
    <string name="whiteOnBlackPixelCharsPrefMessage">Enter characters to use for white on black images from darkest to brightest, or leave blank for the default of .:oO8#</string>

    <string name="blackOnWhitePixelCharsPrefId">pixelChars.BLACK_ON_WHITE</string>
    <string name="blackOnWhitePixelCharsPrefTitle">Black on white characters</string>
    <string name="blackOnWhitePixelCharsPrefSummary">Characters for black on white mode.</string>
    <string name="blackOnWhitePixelCharsPrefMessage">Enter characters to use for black on white images from darkest to brightest, or leave blank for the default of #o:..</string>

    <string name="ansiColorPixelCharsPrefId">pixelChars.ANSI_COLOR</string>
    <string name="ansiColorPixelCharsPrefTitle">Primary color characters</string>
    <string name="ansiColorPixelCharsPrefSummary">Characters for primary color mode.</string>
    <string name="ansiColorPixelCharsPrefMessage">Enter characters to use in images from darkest to brightest, or leave blank for the default of .:oO8#</string>

    <string name="fullColorPixelCharsPrefId">pixelChars.FULL_COLOR</string>
    <string name="fullColorPixelCharsPrefTitle">Full color characters</string>
    <string name="fullColorPixelCharsPrefSummary">Characters for full color mode.</string>
    <string name="fullColorPixelCharsPrefMessage">Enter characters to use in images from darkest to brightest. Full color mode usually works best with fewer or even just one character. Leave blank for default of O8@</string>

    <string name="matrixTextColorPrefId">matrixTextColor</string>
    <string name="matrixTextColorPrefTitle">Matrix text color</string>

    <string name="shareDialogYesLabel">Share</string>
    <string name="shareDialogNoLabel">Cancel</string>
    <string name="shareActionTitle">Share using</string>

    <string name="sharePictureDialogTitle">Share picture as</string>
    <string name="sharePictureJpegOptionLabel">Image</string>
    <string name="sharePictureHtmlOptionLabel">HTML</string>
    <string name="sharePictureTextOptionLabel">Text</string>
    <string name="sharePictureExporting">Exporting image...</string>

    <string name="shareVideoDialogTitle">Share video as</string>
    <string name="shareVideoWebmOptionLabel">WebM video</string>
    <string name="shareVideoFrameArchiveOptionLabel">All frames as ZIP archive</string>
    <string name="shareVideoSingleFrameOptionLabel">Current frame as image</string>

    <string name="videoExportTypePrefsKey">videoExportType</string>
    <string name="videoExportTypePrefsTitle">Export recorded video as</string>
    <string name="videoShareActionTitle">Share video using:</string>

    <string name="webmVideoFormatDescription">WebM video</string>
    <string name="webmExportDialogTitle">Exporting to WebM</string>
    <string name="webmExportDialogMessageVideo">Writing video track</string>
    <string name="webmExportDialogMessageAudio">Writing audio track</string>
    <string name="webmExportConfirmReplaceMessage">A WebM file already exists for this video. Do you want to export again and replace it?</string>

    <string name="zipVideoFormatDescription">ZIP file of video frames</string>
    <string name="zipExportDialogTitle">Creating ZIP archive</string>
    <string name="zipExportDialogMessageVideo">Writing video frames</string>
    <string name="zipExportDialogMessageAudio">Writing audio data</string>
    <string name="zipExportConfirmReplaceMessage">A ZIP archive already exists for this video. Do you want to export again and replace it?</string>
</resources>
